--- a/src/styles/app.module.css
+++ b/src/styles/app.module.css
@@ -1,12 +1,31 @@
 .app {
+  touch-action: pan-y;
   height: 100vh;
   width: 100vw;
   position: relative;
 }
 
-.cake {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+@media screen and (min-width: 680px) {
+  .app {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .cake {
+    width: 100%;
+    /* position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateY(-50%);
+    transform: translateX(-50%); */
+  }
+}
+
+.logo {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.logo img {
+  width: 200px
 }
