--- a/src/styles/cake.module.css
+++ b/src/styles/cake.module.css
@@ -1,10 +1,41 @@
 .cake {
   user-select: none;
   cursor: pointer;
-  margin-top: 30px
-}
+  width: 200px;
+  padding: 20px;
+  margin: auto;
+  margin-top: 20px;
+  font-size: 26px;
 
+  -webkit-animation-duration: 2s;
+  animation-duration: 2s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-animation-timing-function: ease-in-out;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+  -webkit-animation-name: bounce; 
+  animation-name: bounce; 
+}
 
 .globalCake {
   text-align: center;
+}
+
+@media screen and (min-width: 680px) {
+  .cake:hover {
+    animation: none;
+  }
+}
+
+@keyframes bounce {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
